--- a/src/main/resources/com/example/team1project/result.fxml
+++ b/src/main/resources/com/example/team1project/result.fxml
@@ -3,8 +3,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="anchorpane" prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.team1project.ResultController">
+<AnchorPane fx:id="anchorpane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.team1project.ResultController">
    <children>
-      <Button fx:id="btn_back" layoutX="33.0" layoutY="593.0" mnemonicParsing="false" text="Button" />
+      <Label fx:id="resultText1" alignment="CENTER" layoutX="115.0" layoutY="464.0" prefHeight="17.0" prefWidth="770.0" style="-fx-font-size: 18px;" text="Label" />
+      <Label fx:id="resultText2" alignment="CENTER" layoutX="115.0" layoutY="499.0" prefHeight="17.0" prefWidth="770.0" style="-fx-font-size: 18px;" text="Label" />
+      <Label fx:id="resultText3" alignment="CENTER" layoutX="115.0" layoutY="532.0" prefHeight="17.0" prefWidth="770.0" style="-fx-font-size: 18px;" text="Label" />
    </children>
 </AnchorPane>
