메인 타이틀 스타일 적용

--- a/src/main/resources/com/example/team1project/mainview.fxml
+++ b/src/main/resources/com/example/team1project/mainview.fxml
@@ -10,7 +10,7 @@
    <children>
       <AnchorPane fx:id="anchorpane_main" style="-fx-background-color: #ffffff;">
          <children>
-            <Label layoutX="251.0" layoutY="14.0" text="물가 검색">
+            <Label layoutX="250.0" layoutY="14.0" style="-fx-font-weight: bold;" text="물가 검색">
                <font>
                   <Font name="NanumGothic" size="24.0" />
                </font>
